# tool-lfdscanner

./: CHANGELOG.md  LFDScanner.py  README.es.md  README.md  lfdscanner.py  pathraider.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
